--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ flex-direction: row;
     font-size: .7rem;
     padding-left: 1rem;
 }
+#more {display: none;}
 .section1 .career{
     font-size: .75rem;
     padding-left: .8rem;
@@ -143,7 +144,7 @@ flex-direction: row;
 }
 .section11{
     width:15rem;
-    height: 18rem;
+    height: 28rem;
     background-color: white;;
     border-radius: .5rem;
 }
